Fixes z-index issue and changes keybindings to shift + p for story

--- a/src/CommandPalette/CommandPalette.scss
+++ b/src/CommandPalette/CommandPalette.scss
@@ -5,6 +5,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 10;
 }
 
 .command-palette {
@@ -29,6 +30,8 @@
 
   display: flex;
   flex-direction: column;
+
+  z-index: 11;
 
   input {
     width: 100%;
